--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
         android:theme="@style/Theme.Design.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".ui.screen.ActivitySplash"
+            android:name=".ui.screen.ActivityMain"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTask"
             tools:ignore="Instantiatable"
             android:exported="true">
             <intent-filter>
@@ -28,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.screen.ActivityMain"
+            android:name=".ui.screen.ActivitySplash"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
